Update bullet points for F24

--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -4,7 +4,9 @@
     {GPA 3.73, BS Computer Science, BS Mathematics, Dean's List (Fall 2022,
     Spring 2024)}{Somerville, MA}
       \resumeSubSubheading{{Relevant Coursework}: Algorithms, Data structures, 
-    Machine structure, Network security, Multivariable calculus, Linear algebra}{}
+    Machine structure, Programming language theory, Abstract algebra,
+    Probability}{}
+    \resumeSubSubheading{Network security, Assembly programming, Linguistics}{}
       
 
   \resumeSubHeadingListEnd
