--- a/components/projects/encrypted-im.tex
+++ b/components/projects/encrypted-im.tex
@@ -1,7 +1,8 @@
 \resumeProjectHeading
-    {\textbf{Encrypted IM} $|$ \emph{Python}}{January 2024}
+    {\textbf{Encrypted Instant Messenger} $|$ \emph{Python}}{January 2024 – April 2024}
     \resumeItemListStart
-    \resumeItem{Implemented a peer-to-peer encrypted instant messenger using
-    the AES-256 CBC cipher, as a
-    practice in socket programming and encryption. }
+
+    \resumeItem{Demonstrated proficiency in \textbf{network programming} and
+    anonymous communication over 3 months by creating an end-to-end encrypted
+    instant messenger using the AES-256 algorithm.}
 \resumeItemListEnd
