--- a/resume.tex
+++ b/resume.tex
@@ -35,12 +35,12 @@
     \resumeSubHeadingListStart
 
     \input{components/projects/strava-for-flights}
+    \input{components/projects/um}
+    \input{components/projects/encrypted-im}
+    % \input{components/projects/vfl}
     \input{components/projects/world-clock}
-     \input{components/projects/um}
-     \input{components/projects/vfl}
      \input{components/projects/ssh-setup}
     %  \input{components/projects/arith}
-     \input{components/projects/encrypted-im}
 
     \resumeSubHeadingListEnd
   \vspace{-5mm} % For compressing
