--- a/components/projects/strava-for-flights.tex
+++ b/components/projects/strava-for-flights.tex
@@ -1,6 +1,6 @@
 \resumeProjectHeading
         {\textbf{Strava for Flights} $|$ \emph{TypeScript, Node.js, Python,
-        PostgresSQL}}{July 2024}
+        PostgresSQL}}{July 2024 – Present}
         \resumeItemListStart
         \resumeItem{Created an animated, interactive travel sharing product by
         modeling, planning, and writing a full stack web application
