--- a/components/projects/um.tex
+++ b/components/projects/um.tex
@@ -1,11 +1,14 @@
 \resumeProjectHeading
-    {\textbf{Universal Machine} $|$ \emph{C, x86-64 Assembly, Bash}}{November – December 2023}
+    {\textbf{Universal Machine} $|$ \emph{C, x86-64 Assembly, Bash}}{November 2023 – December 2023}
         \resumeItemListStart
-    \resumeItem{Created a Turing Complete virtual machine supporting I/O, machine arithmetic,
-    logic, and memory tested with custom-devised unit-testing framework.}
+    \resumeItem{Created a Turing Complete virtual machine using \textbf{object-oriented
+    programming principles}, separating functionality like I/O, machine arithmetic,
+    logic, and memory. Tested components with custom-devised unit-testing
+    framework.}
     \resumeItem{Optimized the program by analyzing x86-64 Assembly instructions
     and \texttt{qcachegrind} and minimized expensive operations such as
-    dereferencing or allocation through reuse of memory.}
+    dereferencing or allocation through reuse of memory. Verified performance
+    gains via benchmarking against \textbf{1,000,000,000+ instruction} binaries.}
   \resumeItem{Recreated the venerable HP15-C via Assembly instructions derived from
   the Universal Machine's ISA.}
         \resumeItemListEnd
