Add new cs ta bullets

--- a/components/experience/cs15-ca.tex
+++ b/components/experience/cs15-ca.tex
@@ -12,12 +12,17 @@ students' submissions}
 \resumeItem{Developed internal software to organize scoring of submissions between course
  staff using CI/CD pipelines to integrate updates into course infrastructure}
 
- \resumeItem{Graded assignments by studying \textbf{60+ submissions }
+ \resumeItem{Graded assignments by studying \textbf{80+ submissions}
  for functionality, testing, and course coding standards}
+
+%  I responded to internal grading feedback to make my grading practices better
+ \resumeItem{Enriched students' experience by participating in internal grading
+ reviews. Ensured constructive grading comments to help students understand
+ course expectations.}
 
  \resumeItem{Reinforced course objectives and debugging principles during \textbf{1500+ student interactions} by
  explaining lecture topics and assignments in office hours}
-% TODO
+
  \resumeItem{Strengthened understanding of course material weekly for a \textbf{30+ student lab} by delivering comprehensive
  lectures}
 
