--- a/components/pl.tex
+++ b/components/pl.tex
@@ -1,6 +1,6 @@
 \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming Languages}{: C/C++, TypeScript, React, Python,  x86-64 Assembly} \\
+     \textbf{Programming Languages}{:  TypeScript, React, Python,  C/C++, x86-64 Assembly} \\
      \textbf{Tools and Technologies}{: Node.js, DevOps, Docker, Django, MongoDB,
      PostgresSQL, AWS, Tailwind
      CSS, Figma, HTML} \\
