Add courses / change gitignore to account for latexmk recipe

--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -5,8 +5,9 @@
     Spring 2024)}{Somerville, MA}
       \resumeSubSubheading{{Relevant Coursework}: Algorithms, Data structures, 
     Machine structure, Programming language theory, Abstract algebra,
-    Probability}{}
-    \resumeSubSubheading{Network security, Assembly programming, Linguistics}{}
+    Probability theory}{}
+    \resumeSubSubheading{Network security, Assembly programming, Linguistics
+    theory}{}
       
 
   \resumeSubHeadingListEnd
