Add online cs15

--- a/resume.tex
+++ b/resume.tex
@@ -22,7 +22,6 @@
 \vspace{-6mm} % For compressing
 \section{Experience}
 \resumeSubHeadingListStart
-
       \input{components/experience/cs15-ca}
       \input{components/experience/jumbocode}
       \input{components/experience/asm}
@@ -40,7 +39,7 @@
     \input{components/projects/encrypted-im}
     % \input{components/projects/vfl}
     \input{components/projects/world-clock}
-     \input{components/projects/ssh-setup}
+    %  \input{components/projects/ssh-setup}
     %  \input{components/projects/arith}
 
     \resumeSubHeadingListEnd
