--- a/components/experience/cs15-ca.tex
+++ b/components/experience/cs15-ca.tex
@@ -26,6 +26,10 @@ students' submissions}
  \resumeItem{Strengthened understanding of course material weekly for a \textbf{30+ student lab} by delivering comprehensive
  lectures}
 
+ \resumeItem{Emphasized learning objectives for graduate offering of data
+ structures by restructuring assignment scoring, incorporating new assignments,
+ and holding virtual office hours}
+
  
 \resumeItemListEnd
 
