--- a/components/skills.tex
+++ b/components/skills.tex
@@ -27,7 +27,7 @@
      Premiere Pro, InDesign, Wordpress} \\
      \textbf{Travel}{: Hiking mountains, traveling to novel destinations, 
      searching for amazing flight deals} \\
-     \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
+    %  \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
     %  \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
      
     }}
