Add new spoken language

--- a/components/skills.tex
+++ b/components/skills.tex
@@ -22,7 +22,8 @@
     %  \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
     %  OpenStreetMap, qGIS)} \\
     %  \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz} \\
-     \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
+     \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish,
+     French, and Urdu} \\
      \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, 
      Premiere Pro, InDesign, Wordpress} \\
      \textbf{Travel}{: Hiking mountains, traveling to novel destinations, 
