--- a/components/experience/cs15-ca.tex
+++ b/components/experience/cs15-ca.tex
@@ -14,6 +14,8 @@ students' submissions}
 
  \resumeItem{Graded assignments by studying \textbf{80+ submissions}
  for functionality, testing, and course coding standards}
+ 
+ \resumeItem{Improved \textbf{150+ students'} ability to engineer large-scale, low-level programs by encouraging rigorous testing, building modular architecture, and harnessing existing libraries}
 
 %  I responded to internal grading feedback to make my grading practices better
  \resumeItem{Enriched students' experience by participating in internal grading
