Add new bullet points for teaching assistant. Change title for position

--- a/components/experience/cs15-40-ca.tex
+++ b/components/experience/cs15-40-ca.tex
@@ -1,4 +1,4 @@
-\resumeSubheading {Course Assistant for Machine Structure, Assembly Programming,
+\resumeSubheading {Teaching Assistant for Machine Structure, Assembly Programming,
 and Data Structures}{May
 2023 – Present} {Tufts University, Department of Computer Science}{Somerville, MA}
  \resumeItemListStart 
@@ -23,6 +23,15 @@ students' submissions}
  \resumeItem{Enriched students' experience by participating in internal grading
  reviews. Ensured constructive grading comments to help students understand
  course expectations.}
+
+ \resumeItem{Guided \textbf{100+ students} through course content by leading
+ review sessions for exams}
+
+ \resumeItem{Improved student comprehension by leading review session for
+ \textbf{100+ students} covering key course content and exam preparation.}
+
+\resumeItem{Enhanced students' programming practices by leading a hands-on
+shell scripting workshop for \textbf{30+ students}.}
 
  \resumeItem{Reinforced course objectives and debugging principles during \textbf{1500+ student interactions} by
  explaining lecture topics and assignments in office hours}
