--- a/resume.tex
+++ b/resume.tex
@@ -23,7 +23,7 @@
 \vspace{-6mm} % For compressing
 \section{Experience}
 \resumeSubHeadingListStart
-      \input{components/experience/cs15-ca}
+      \input{components/experience/cs15-40-ca}
       \input{components/experience/jumbocode}
       \input{components/experience/asm}
       \input{components/experience/thi}
@@ -37,7 +37,7 @@
 
     \input{components/projects/globetrotter}
     \input{components/projects/um}
-    \input{components/projects/encrypted-im}
+    % \input{components/projects/encrypted-im}
     % \input{components/projects/vfl}
     \input{components/projects/world-clock}
     %  \input{components/projects/ssh-setup}
