Comment out too many skills

--- a/components/skills.tex
+++ b/components/skills.tex
@@ -26,8 +26,8 @@
      French, and Urdu} \\
      \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, 
      Premiere Pro, InDesign, Wordpress} \\
-    \textbf{Travel}{: Hiking mountains, traveling to novel destinations, 
-    searching for amazing flight deals} \\
+    % \textbf{Travel}{: Hiking mountains, traveling to novel destinations, 
+    % searching for amazing flight deals} \\
     %  \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
     %  \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
      
