Try to fill better

--- a/components/skills.tex
+++ b/components/skills.tex
@@ -24,8 +24,8 @@
     %  \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz} \\
      \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish,
      French, and Urdu} \\
-     \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, 
-     Premiere Pro, InDesign, Wordpress} \\
+    %  \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, 
+    %  Premiere Pro, InDesign, Wordpress} \\
     % \textbf{Travel}{: Hiking mountains, traveling to novel destinations, 
     % searching for amazing flight deals} \\
     %  \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
