--- a/components/experience/cs15-40-ca.tex
+++ b/components/experience/cs15-40-ca.tex
@@ -3,6 +3,11 @@ and Data Structures}{May
 2023 – Present} {Tufts University, Department of Computer Science}{Somerville, MA}
  \resumeItemListStart 
 
+ \resumeItem{Improved \textbf{150+ students'} ability to engineer large-scale,
+ low-level programs 
+ by encouraging rigorous testing, building modular architecture, and harnessing
+ existing libraries}
+ 
 \resumeItem{Strengthened course infrastructure for \textbf{200+ students} by improving
 autograding software, staff software, and assignment solutions}
 
@@ -15,23 +20,22 @@ students' submissions}
  \resumeItem{Graded assignments by studying \textbf{200+ submissions}
  for functionality, testing, and course coding standards}
  
- \resumeItem{Improved \textbf{150+ students'} ability to engineer large-scale,
- low-level programs 
- by encouraging rigorous testing, building modular architecture, and harnessing existing libraries}
 
 %  I responded to internal grading feedback to make my grading practices better
  \resumeItem{Enriched students' experience by participating in internal grading
- reviews. Ensured constructive grading comments to help students understand
+ reviews}
+ \resumeItem{
+ Ensured constructive grading comments to help students understand
  course expectations.}
 
  \resumeItem{Guided \textbf{100+ students} through course content by leading
  review sessions for exams}
 
  \resumeItem{Improved student comprehension by leading review session for
- \textbf{100+ students} covering key course content and exam preparation.}
+ \textbf{100+ students} covering key course content and exam preparation}
 
 \resumeItem{Enhanced students' programming practices by leading a hands-on
-shell scripting workshop for \textbf{30+ students}.}
+shell scripting workshop for \textbf{30+ students}}
 
  \resumeItem{Reinforced course objectives and debugging principles during \textbf{1500+ student interactions} by
  explaining lecture topics and assignments in office hours}
