--- a/components/experience/jumbocode.tex
+++ b/components/experience/jumbocode.tex
@@ -25,7 +25,7 @@
       system for editing privileges}
       \resumeItem{Automated database maintenance using PyMongo, reducing manual
       data handling tasks, and speeding up
-      database work \textbf{by 30\%}.}
+      database work \textbf{by 30\%}}
       \resumeItem{Designed a cohesive user interface for \textbf{50+ pages} by creating and
       documenting React components in TypeScript}
     \resumeItemListEnd
