--- a/components/projects/um.tex
+++ b/components/projects/um.tex
@@ -3,12 +3,12 @@
         \resumeItemListStart
     \resumeItem{Created a Turing Complete virtual machine using \textbf{object-oriented
     programming principles}, separating functionality like I/O, machine arithmetic,
-    logic, and memory. Tested components with custom-devised unit-testing
-    framework.}
+    logic, and memory; tested components with custom-devised unit-testing
+    framework}
     \resumeItem{Optimized the program by analyzing x86-64 Assembly instructions
     and \texttt{qcachegrind} and minimized expensive operations such as
-    dereferencing or allocation through reuse of memory. Verified performance
-    gains via benchmarking against \textbf{1,000,000,000+ instruction} binaries.}
+    dereferencing or allocation through reuse of memory; verified performance
+    gains via benchmarking against \textbf{1,000,000,000+ instruction} binaries}
   \resumeItem{Recreated the venerable HP15-C via Assembly instructions derived from
-  the Universal Machine's ISA.}
+  the Universal Machine's ISA}
         \resumeItemListEnd
