--- a/components/projects/world-clock.tex
+++ b/components/projects/world-clock.tex
@@ -2,8 +2,8 @@
         {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{August 2023}
         \resumeItemListStart
         \resumeItem{Constructed a web application showing the time of user-chosen
-        cities, with a helpful, responsive map to aid in visualization.}
+        cities, with a helpful, responsive map to aid in visualization}
         \resumeItem{Integrated OpenStreetMap and MapBox libraries for graphics.
-        APIs were chosen as they best met the scalability requirements.}
-          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git.}
+        APIs were chosen as they best met the scalability requirements}
+          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
           \resumeItemListEnd
