Fit back in one page

--- a/components/experience/cs15-40-ca.tex
+++ b/components/experience/cs15-40-ca.tex
@@ -9,9 +9,7 @@ and Data Structures}{May
  existing libraries}
  
 \resumeItem{Strengthened course infrastructure for \textbf{200+ students} by improving
-autograding software, staff software, and assignment solutions}
-
-\resumeItem{Contributed\textbf{ 20+ unit tests }to autograder by finding edge behavior in
+autograding software, staff software, and assignment solutions; contributed\textbf{ 20+ unit tests }to autograder by finding edge behavior in
 students' submissions}
 
 \resumeItem{Developed internal software to organize scoring of submissions between course
@@ -23,13 +21,8 @@ students' submissions}
 
 %  I responded to internal grading feedback to make my grading practices better
  \resumeItem{Enriched students' experience by participating in internal grading
- reviews}
- \resumeItem{
- Ensured constructive grading comments to help students understand
+ reviews; ensured constructive grading comments to help students understand
  course expectations.}
-
- \resumeItem{Guided \textbf{100+ students} through course content by leading
- review sessions for exams}
 
  \resumeItem{Improved student comprehension by leading review session for
  \textbf{100+ students} covering key course content and exam preparation}
@@ -37,7 +30,7 @@ students' submissions}
 \resumeItem{Enhanced students' programming practices by leading a hands-on
 shell scripting workshop for \textbf{30+ students}}
 
- \resumeItem{Reinforced course objectives and debugging principles during \textbf{1500+ student interactions} by
+ \resumeItem{Reinforced course objectives and debugging principles during \textbf{2000+ student interactions} by
  explaining lecture topics and assignments in office hours}
 
  \resumeItem{Strengthened understanding of course material weekly for a \textbf{30+ student lab} by delivering comprehensive
