--- a/components/skills.tex
+++ b/components/skills.tex
@@ -22,8 +22,9 @@
     %  \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
     %  OpenStreetMap, qGIS)} \\
     %  \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz} \\
-     \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish,
-     French, and Urdu} \\
+     \textbf{Spoken Languages}{: Proficiency in English, Hindi, Urdu, Spanish,
+     and
+     French} \\
      \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, 
      Premiere Pro, InDesign, Wordpress} \\
     \textbf{Travel}{: Hiking mountains, traveling to novel destinations, 
