--- a/resume.tex
+++ b/resume.tex
@@ -23,6 +23,7 @@
 \vspace{-6mm} % For compressing
 \section{Experience}
 \resumeSubHeadingListStart
+      % \input{components/experience/pulse-bf}
       \input{components/experience/cs15-40-ca}
       \input{components/experience/jumbocode}
       \input{components/experience/asm}
