ADD new TF role, CHANGE TA role

--- a/components/pl.tex
+++ b/components/pl.tex
@@ -1,7 +1,7 @@
 \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
      \textbf{Programming Languages}{:  C/C++, Python, TypeScript, React,
-     Rust, x86-64 Assembly, Standard ML} \\
+     Rust, x86-64 Assembly, Standard ML, OCaml} \\
      \textbf{Tools and Technologies}{: Node.js, DevOps, Docker, Django, MongoDB,
      PostgresSQL, AWS, Tailwind
      CSS, Figma, HTML} \\
