--- a/resume.tex
+++ b/resume.tex
@@ -13,7 +13,7 @@
 \vspace{-3mm} % For compressing
 \section{Education}
 
-\input{components/education/tufts.tex}
+\input{components/education/tufts}
 \vspace{-4mm} % For compressing
 
 \section{Skills}
@@ -24,7 +24,8 @@
 \section{Experience}
 \resumeSubHeadingListStart
       % \input{components/experience/pulse-bf}
-      \input{components/experience/cs15-40-ca}
+      \input{components/experience/cs40-tf}
+      \input{components/experience/cs15-ca}
       \input{components/experience/jumbocode}
       \input{components/experience/asm}
       \input{components/experience/thi}
@@ -40,7 +41,7 @@
     \input{components/projects/um}
     % \input{components/projects/encrypted-im}
     % \input{components/projects/vfl}
-    \input{components/projects/world-clock}
+    % \input{components/projects/world-clock}
     %  \input{components/projects/ssh-setup}
     %  \input{components/projects/arith}
 
