--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -1,12 +1,12 @@
 \resumeSubHeadingListStart
     \resumeSubheading
       {Tufts University}{August 2022 – May 2026}
-    {GPA 3.73, BS Computer Science, BS Mathematics, Dean's List (Fall 2022,
+    {GPA 3.64, BS Computer Science, BS Mathematics, Dean's List (Fall 2022,
     Spring 2024)}{Somerville, MA}
-      \resumeSubSubheading{{Relevant Coursework}: Algorithms, Data structures, 
-    Machine structure, Programming language theory, Abstract algebra,
-    Probability theory}{}
-    \resumeSubSubheading{Network security, Assembly programming, Linguistics
+    \resumeSubSubheading{{Relevant Coursework}: Machine learning, Algorithms,
+    Machine structure, Data structures, Statistics theory, Operating systems}{}
+    \resumeSubSubheading{Probability theory, Abstract
+    algebra, Programming language theory, Network security, Assembly programming, Linguistics
     theory}{}
       
 
