ENH JC description

--- a/components/experience/jumbocode.tex
+++ b/components/experience/jumbocode.tex
@@ -19,7 +19,7 @@
       \resumeItemListStart 
         \resumeItem{Enhanced the information display for the \textbf{1,000,000+
         annual visitors} of the Emerald Necklace Conservancy by designing a full-stack
-        web app in a tight-knit, agile team }
+        iOS/web application in a tight-knit, agile team }
       \resumeItem{Created a secure page modification system for park administration by
       maintaining a MongoDB database for information, and an authentication
       system for editing privileges}
