--- a/components/pl.tex
+++ b/components/pl.tex
@@ -1,9 +1,9 @@
 \begin{itemize}[leftmargin=0in, label={}]
-    \small{\item{
+    \footnotesize{\item{
      \textbf{Programming Languages}{:  C/C++, Python, TypeScript, React,
      Rust, x86-64 Assembly, Standard ML, OCaml} \\
-     \textbf{Tools and Technologies}{: Node.js, DevOps, Docker, Django, MongoDB,
-     PostgresSQL, AWS, Tailwind
+     \textbf{Tools and Technologies}{: Node.js, DevOps, Docker, MongoDB,
+     PostgreSQL, AWS, Scikit-learn, Pandas, NumPy, Matplotlib, Tailwind
      CSS, Figma, HTML} \\
     %  \textbf{Frameworks and Environments}{: React, React Native, Node.js, 
     %  MongoDB, Bun} \\
