ADD tufts sp25 final stats, and JPMC

--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -1,8 +1,8 @@
 \resumeSubHeadingListStart
     \resumeSubheading
       {Tufts University}{August 2022 – May 2026}
-    {GPA 3.64, BS Computer Science, BS Mathematics, Dean's List (Fall 2022,
-    Spring 2024)}{Somerville, MA}
+    {GPA 3.69, BS Computer Science, BS Mathematics, Dean's List (Fall 2022,
+    Spring 2024, Spring 2025)}{Somerville, MA}
     \resumeSubSubheading{{Relevant Coursework}: Machine learning, Algorithms,
     Machine structure, Data structures, Statistics theory, Operating systems}{}
     \resumeSubSubheading{Probability theory, Abstract
@@ -11,3 +11,8 @@
       
 
   \resumeSubHeadingListEnd
+
+  % 3.6667 * 3
+  % 4.000 * 4
+  % 4.000 * 3
+  % 4.000  * 3
