--- a/resume.tex
+++ b/resume.tex
@@ -24,6 +24,7 @@
 \section{Experience}
 \resumeSubHeadingListStart
       % \input{components/experience/pulse-bf}
+      \input{components/experience/jpmc}
       \input{components/experience/cs40-tf}
       \input{components/experience/cs15-ca}
       \input{components/experience/jumbocode}
