EDIT skill and DEL thi

--- a/resume.tex
+++ b/resume.tex
@@ -29,7 +29,7 @@
       \input{components/experience/cs15-ca}
       \input{components/experience/jumbocode}
       \input{components/experience/asm}
-      \input{components/experience/thi}
+      % \input{components/experience/thi}
 
   \resumeSubHeadingListEnd
 
