--- a/components/experience/cs15-ca.tex
+++ b/components/experience/cs15-ca.tex
@@ -21,12 +21,12 @@ students' submissions.}
  \resumeItem{Reinforced course objectives and debugging principles during \textbf{2500+ student interactions} by
  explaining lecture topics and assignments in office hours.}
 
- \resumeItem{Strengthened understanding of course material weekly for a \textbf{30+ student lab} by delivering comprehensive
- lectures.}
+%  \resumeItem{Strengthened understanding of course material weekly for a \textbf{30+ student lab} by delivering comprehensive
+%  lectures.}
 
- \resumeItem{Emphasized learning objectives for graduate offering of data
- structures by restructuring assignment scoring, incorporating new assignments,
- and holding virtual office hours.}
+%  \resumeItem{Emphasized learning objectives for graduate offering of data
+%  structures by restructuring assignment scoring, incorporating new assignments,
+%  and holding virtual office hours.}
 
  
 \resumeItemListEnd
