--- a/components/experience/jpmc.tex
+++ b/components/experience/jpmc.tex
@@ -3,6 +3,7 @@
 {J.P. Morgan Chase \& Co.}{Jersey City, NJ}
 \resumeItemListStart
 \vspace{1mm} 
-\resumeItem{Incoming Software Engineering Intern from June 2 – August 8}
+\resumeItem{Incoming Software Engineering Intern from June 2 – August 8. Will
+develop and present full-stack product built in agile team using Javascript/React and Python.}
 \resumeItemListEnd
 
