--- a/components/experience/thi.tex
+++ b/components/experience/thi.tex
@@ -2,8 +2,8 @@
       {Visual Communications Intern}{May 2021 -- August 2021}
       {Texas Heart Institute}{Houston, TX}
       \resumeItemListStart
-        \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
-      \resumeItem{\href{https://vimeo.com/596132688\#t=1m48s}{\underline{Interviewed for
-      animation work}}
-        by the \textit{Houston Chronicle} }
+      \resumeItem{Designed graphics, created animations, and \href{https://vimeo.com/596132688\#t=1m48s}{\underline{presented work}} to
+      the \textit{Houston Chronicle} representing cardiological research for
+      publicity}
+     \vspace{-0.7mm}
     \resumeItemListEnd
