--- a/components/pl.tex
+++ b/components/pl.tex
@@ -1,10 +1,10 @@
 \begin{itemize}[leftmargin=0in, label={}]
-    \footnotesize{\item{
+    \subfootnotesize{\item{
      \textbf{Programming Languages}{:  C/C++, Python, TypeScript, React,
      Rust, x86-64 Assembly, Standard ML, OCaml} \\
-     \textbf{Tools and Technologies}{: Node.js, DevOps, Docker, MongoDB,
-     PostgreSQL, AWS, Scikit-learn, Pandas, NumPy, Matplotlib, Tailwind
-     CSS, Figma, HTML} \\
+     \textbf{Tools \& Technologies}{: Node.js, DevOps, CI/CD, Docker, MongoDB,
+     PostgreSQL, AWS, Scikit-learn, Pandas/NumPy/Matplotlib, Tailwind, Figma, HTML} \\
+    %  \textbf{Technical Topics}{: Regression, Classification, PCA, }
     %  \textbf{Frameworks and Environments}{: React, React Native, Node.js, 
     %  MongoDB, Bun} \\
     %  \textbf{Technical Topics}{: Software testing, object-oriented design,
