--- a/components/projects/globetrotter.tex
+++ b/components/projects/globetrotter.tex
@@ -1,5 +1,5 @@
 \resumeProjectHeading
-        {\textbf{Globetrotter} $|$ \emph{TypeScript, Node.js, Python,
+        {\textbf{Globetrotter} $|$ \emph{TypeScript/JavaScript, Node.js, Python, React,
         PostgresSQL}}{July 2024 – Present}
         \resumeItemListStart
         \resumeItem{Created an animated, interactive travel sharing product by
