--- a/components/skills.tex
+++ b/components/skills.tex
@@ -27,8 +27,8 @@
      French} \\
      \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, 
      Premiere Pro, InDesign, Wordpress} \\
-    \textbf{Travel}{: Traveling to novel destinations, hiking mountains,
-    creating destination wallpapers/postcards} \\
+    % \textbf{Travel}{: Traveling to novel destinations, hiking mountains,
+    % creating destination wallpapers/postcards} \\
     %  \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
     %  \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
      
