--- a/resume.tex
+++ b/resume.tex
@@ -28,8 +28,8 @@
       \input{components/experience/cs40-tf}
       \input{components/experience/cs15-ca}
       \input{components/experience/jumbocode}
-      \input{components/experience/asm}
-      % \input{components/experience/thi}
+      % \input{components/experience/asm}
+      \input{components/experience/thi}
 
   \resumeSubHeadingListEnd
 
@@ -40,6 +40,7 @@
 
     \input{components/projects/globetrotter}
     \input{components/projects/um}
+    \input{components/projects/ml}
     % \input{components/projects/encrypted-im}
     % \input{components/projects/vfl}
     % \input{components/projects/world-clock}
