--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -4,8 +4,8 @@
     {GPA 3.69, BS Computer Science, BS Mathematics, Dean's List (Fall 2022,
     Spring 2024, Spring 2025)}{Somerville, MA}
     \resumeSubSubheading{{Relevant Coursework}: Machine learning, Algorithms,
-    Machine structure, Data structures, Statistics theory, Operating systems}{}
-    \resumeSubSubheading{Probability theory, Abstract
+    Machine structure, Data structures, Statistics/Probability theory, Distributed systems}{}
+    \resumeSubSubheading{Operating systems, Modeling, Abstract
     algebra, Programming language theory, Network security, Assembly programming, Linguistics
     theory}{}
       
