ADD new bullet points

--- a/components/experience/cs15-ca.tex
+++ b/components/experience/cs15-ca.tex
@@ -7,8 +7,8 @@ Assembly Programming}{May
 autograding software, staff software, and assignment solutions; contributed\textbf{ 20+ unit tests }to autograder by finding edge behavior in
 students' submissions.}
 
-\resumeItem{Developed internal software to organize scoring of submissions between course
- staff using CI/CD pipelines to integrate updates into course infrastructure.}
+% \resumeItem{Developed internal software to organize scoring of submissions between course
+%  staff using CI/CD pipelines to integrate updates into course infrastructure.}
 
  \resumeItem{Graded assignments by studying \textbf{200+ submissions}
  for functionality, testing, and course coding standards.}
