--- a/components/experience/jpmc.tex
+++ b/components/experience/jpmc.tex
@@ -1,9 +1,9 @@
 \resumeSubheading
 {Software Engineering Intern – Markets Technology, Commercial \& Investment Banking}{June 2025 – Present}
-{J.P. Morgan Chase \& Co.}{Jersey City, NJ}
+{J.P. Morgan Chase \& Co.}{Jersey City, NJ | New York, NY}
 \resumeItemListStart
 \vspace{1mm} 
-\resumeItem{Incoming Software Engineering Intern from June 2 – August 8. Will
-develop and present full-stack product built in agile team using Javascript/React and Python.}
+\resumeItem{Optimized trading platform latency by developing a microservice that asynchronously listens to and aggregates data from multiple data pipelines, reducing bottlenecks and improving real-time information delivery to traders.}
+\resumeItem{Recognized as \textbf{top 5 hackathon team among 2000+ teams} for building an AI-powered travel recommendation tool and marketing assistant by leveraging an agentic RAG workflow to give detailed user suggestions and promotional feedback.}
 \resumeItemListEnd
 
