--- a/components/pl.tex
+++ b/components/pl.tex
@@ -1,20 +1,29 @@
+% \begin{itemize}[leftmargin=0in, label={}]
+%     \subfootnotesize{\item{
+%      \textbf{Programming Languages}{:  C/C++, Python, TypeScript, React,
+%      Rust, x86-64 Assembly, Standard ML, OCaml} \\
+%      \textbf{Tools \& Technologies}{: Node.js, DevOps, CI/CD, Docker, MongoDB,
+%      PostgreSQL, AWS, Scikit-learn, Pandas/NumPy/Matplotlib, Tailwind, Figma, HTML} \\
+%     %  \textbf{Technical Topics}{: Regression, Classification, PCA, }
+%     %  \textbf{Frameworks and Environments}{: React, React Native, Node.js, 
+%     %  MongoDB, Bun} \\
+%     %  \textbf{Technical Topics}{: Software testing, object-oriented design,
+%     %  encrypted network programming, machine arithmetic, memory hierarchy
+%     %  (especially cache structures), performance analytics, data structures,
+%     %  algorithms, compilers} \\
+%     %  \textbf{Developer Tools}{: Linux/UNIX terminal, shell scripting,
+%     %  Git/GitHub-assisted development, GCC, Makefile, Figma} \\
+%     %  \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
+%     %  OpenStreetMap, qGIS)} \\
+%     %  \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz} \\
+%     }}
+% \end{itemize}
+
 \begin{itemize}[leftmargin=0in, label={}]
-    \subfootnotesize{\item{
-     \textbf{Programming Languages}{:  C/C++, Python, TypeScript, React,
-     Rust, x86-64 Assembly, Standard ML, OCaml} \\
-     \textbf{Tools \& Technologies}{: Node.js, DevOps, CI/CD, Docker, MongoDB,
-     PostgreSQL, AWS, Scikit-learn, Pandas/NumPy/Matplotlib, Tailwind, Figma, HTML} \\
-    %  \textbf{Technical Topics}{: Regression, Classification, PCA, }
-    %  \textbf{Frameworks and Environments}{: React, React Native, Node.js, 
-    %  MongoDB, Bun} \\
-    %  \textbf{Technical Topics}{: Software testing, object-oriented design,
-    %  encrypted network programming, machine arithmetic, memory hierarchy
-    %  (especially cache structures), performance analytics, data structures,
-    %  algorithms, compilers} \\
-    %  \textbf{Developer Tools}{: Linux/UNIX terminal, shell scripting,
-    %  Git/GitHub-assisted development, GCC, Makefile, Figma} \\
-    %  \textbf{JavaScript APIs}{: Mapping APIs (e.g. MapBox, Maplibre, LeafletJS,
-    %  OpenStreetMap, qGIS)} \\
-    %  \textbf{Python Modules}{: pandas, matplotlib, sys, select, socket, tz} \\
-    }}
+  \scriptsize{
+    \item{
+      \textbf{Programming Languages}{: C/C++, Python, TypeScript, React, Rust, x86-64 Assembly, Standard ML, OCaml} \\
+      \textbf{Tools, Technologies \& Concepts}{: Node.js, Docker, CI/CD, AWS, MongoDB, PostgreSQL, Scikit-learn, NumPy/Pandas/Matplotlib, TensorFlow/Keras, PyTorch, Tailwind, Figma, HTML, Unit/Integration Testing, Functional \& Concurrent Programming, Hyperparameter Tuning}
+    }
+  }
 \end{itemize}
