--- a/components/experience/jpmc.tex
+++ b/components/experience/jpmc.tex
@@ -1,6 +1,6 @@
 \resumeSubheading
 {Software Engineering Intern – Markets Technology, Commercial \& Investment Banking}{June 2025 – Present}
-{J.P. Morgan Chase \& Co.}{Jersey City, NJ | New York, NY}
+{J.P. Morgan Chase \& Co.}{New York, NY}
 \resumeItemListStart
 \vspace{1mm} 
 \resumeItem{Optimized trading platform latency by developing a microservice that asynchronously listens to and aggregates data from multiple data pipelines, reducing bottlenecks and improving real-time information delivery to traders.}
