ADD post jpmc, clean up

--- a/components/experience/jpmc.tex
+++ b/components/experience/jpmc.tex
@@ -1,9 +1,60 @@
 \resumeSubheading
-{Software Engineering Intern – Markets Technology, Commercial \& Investment Banking}{June 2025 – Present}
+{Software Engineering Intern – Markets Technology, Commercial \& Investment
+Banking}{June 2025 – August 2025}
 {J.P. Morgan Chase \& Co.}{New York, NY}
 \resumeItemListStart
 \vspace{1mm} 
-\resumeItem{Optimized trading platform latency by developing a microservice that asynchronously listens to and aggregates data from multiple data pipelines, reducing bottlenecks and improving real-time information delivery to traders.}
-\resumeItem{Recognized as \textbf{top 5 hackathon team among 2000+ teams} for building an AI-powered travel recommendation tool and marketing assistant by leveraging an agentic RAG workflow to give detailed user suggestions and promotional feedback.}
+
+% TODO: mention SDLC, navigating business critical times like code freezes
+
+
+\resumeItem{Built end-to-end and deployed production monitoring application for high
+touch bond trading platform, enabling performance analytics across \textbf{5
+critical data enrichment services} for over \textbf{100,000+ trades per day} and
+improving trade execution in global markets. Flagged \textbf{20\% of requests}
+suffering extreme latency in key service, driving target optimizations that
+significantly improved trade execution workflow. }
+
+\resumeItem{Expanded scope of product ownership by iterating on features and
+incorporating feedback from stakeholders in \textbf{5+ widespread locations}.
+Enhanced the application to provide actionable metrics for \textbf{99\% of
+requests}, iterated on live troubleshooting features, and ultimately achieved
+\textbf{100\% alignment with the product vision}.}
+
+\resumeItem{Demonstrated product proficiency and faciliated product improvements
+by delivering a live presentation of the application to \textbf{teams
+across 20+ locations}, including senior executives and key stakeholders, resulting in
+actionable feedback, effectively showcasing the tool's utility, and providing
+technical points of improvement for line of business. }
+
+\resumeItem{Brought application from concept to completion \textbf{within 10
+weeks} using the firm SDLC; managing feature development, testing, stakeholder
+approval, and critical business periods such as code freezes. Enabled future
+work within the SDLC by creating a maintainable and well-documented codebase.}
+
+\resumeItem{Prototyped an AI-powered travel recommendation tool later adopted by
+firm, leveraging an agentic RAG workflow to give detailed user suggestions and
+promotional feedback. Recognized among \textbf{the top 5 teams} in New York City
+offices for effective presentation and innovative product.}
+
+\resumeItem{Proactively expanded domain knowledge within \textbf{2 weeks} by attending learning sessions, organizing regular coffee chats with experienced developers and management, and studying technical documentation to accelerate project progress.}
+% \resumeItem{Optimized trading platform latency by developing a suite of services that asynchronously 
+% listen to and aggregate data from multiple data pipelines, reducing bottlenecks and improving
+% real-time information delivery to high-frequency traders.} 
+
+
+
+% \resumeItem{Recognized as \textbf{top 5 hackathon team
+% among 2000+ teams} for building an AI-powered travel recommendation tool and marketing assistant by
+% leveraging an agentic RAG workflow to give detailed user suggestions and promotional feedback.}
 \resumeItemListEnd
 
+% created a project that monitored peformance across multiple services in bonds
+% high touch trading platform.
+% Helps find how well services are meeting performance thresholds, identify
+% issues quickly in services, or improve service resiliency.
+% Performance focused -- trades update multiple times within a second
+% successfully shipped application to production
+% collaborated with global stakeholders to action upon feedback given by them to
+% improve the tool
+% 
