--- a/resume.tex
+++ b/resume.tex
@@ -21,15 +21,15 @@
 \input{components/pl.tex}
 
 \vspace{-6mm} % For compressing
-\section{Experience}
+\section{Relevant Experience}
 \resumeSubHeadingListStart
       % \input{components/experience/pulse-bf}
       \input{components/experience/jpmc}
       \input{components/experience/cs40-tf}
-      \input{components/experience/cs15-ca}
-      \input{components/experience/jumbocode}
+      % \input{components/experience/cs15-ca}
+      % \input{components/experience/jumbocode}
       % \input{components/experience/asm}
-      \input{components/experience/thi}
+      % \input{components/experience/thi}
 
   \resumeSubHeadingListEnd
 
