--- a/resume_full.tex
+++ b/resume_full.tex
@@ -26,11 +26,11 @@
       % \input{components/experience/pulse-bf}
       \input{components/experience/jpmc}
       \input{components/experience/cs40-tf}
-      % \input{components/experience/cs15-ca}
-      % \input{components/experience/jumbocode}
-      % \input{components/experience/asm}
-      % \input{components/experience/thi}
-
+      \input{components/experience/cs15-ca}
+      \input{components/experience/jumbocode}
+      \input{components/experience/asm}
+      \input{components/experience/thi}
+% 
   \resumeSubHeadingListEnd
 
   \vspace{-4.1mm} % For compressing
