Add new projects and refresh end of F25

--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -3,11 +3,10 @@
       {Tufts University}{August 2022 – May 2026}
     {GPA 3.69, BS Computer Science, BS Mathematics, Dean's List (Fall 2022,
     Spring 2024, Spring 2025)}{Somerville, MA}
-    \resumeSubSubheading{{Relevant Coursework}: Machine learning, Algorithms,
-    Machine structure, Data structures, Statistics/Probability theory, Distributed systems}{}
+    \resumeSubSubheading{{Relevant Coursework}: Distributed systems, Machine learning, Algorithms,
+    Machine structure, Data structures, Statistics/Probability theory, }{}
     \resumeSubSubheading{Operating systems, Modeling, Abstract
-    algebra, Programming language theory, Network security, Assembly programming, Linguistics
-    theory}{}
+    algebra, Programming language theory, Compilers, Embedded systems, Network security, Linguistics}{}
   \resumeSubHeadingListEnd
 
   % 3.6667 * 3
