--- a/resume.tex
+++ b/resume.tex
@@ -38,8 +38,10 @@
 \section{Relevant Projects}
     \resumeSubHeadingListStart
 
-    \input{components/projects/globetrotter}
+    \input{components/projects/file-copy}
     \input{components/projects/um}
+    % \input{components/projects/globetrotter}
+    \input{components/projects/photos}
     \input{components/projects/ml}
     % \input{components/projects/encrypted-im}
     % \input{components/projects/vfl}
