--- a/components/projects/ml.tex
+++ b/components/projects/ml.tex
@@ -6,12 +6,12 @@
            workflow (preprocessing, training, performance evaluation) by
            building robust models (MLPClassifier, LogisticRegression) to classify text by reading level.}
           \resumeItemListEnd
-\resumeProjectHeading
-           {\textbf{Movie Recommendations} $|$ \emph{Python, Jupyter
-        Notebook, Scikit-learn}}{April 2025}
-        \resumeItemListStart
-        \resumeItem{Established clear understanding of unsupervised learning
-           workflow (initialization, training, tuning, evaluation) and utilty
-           of various accuracy metrics by building various latent factor models
-           to recommend movies from Movielens100k database to users.}
-          \resumeItemListEnd
+% \resumeProjectHeading
+%            {\textbf{Movie Recommendations} $|$ \emph{Python, Jupyter
+%         Notebook, Scikit-learn}}{April 2025}
+%         \resumeItemListStart
+%         \resumeItem{Established clear understanding of unsupervised learning
+%            workflow (initialization, training, tuning, evaluation) and utilty
+%            of various accuracy metrics by building various latent factor models
+%            to recommend movies from Movielens100k database to users.}
+%           \resumeItemListEnd
