add deans list stuff

--- a/components/education/tufts.tex
+++ b/components/education/tufts.tex
@@ -2,7 +2,7 @@
     \resumeSubheading
       {Tufts University}{August 2022 – May 2026}
     {GPA 3.73, BS Computer Science, BS Mathematics, Dean's List (Fall 2022,
-    Spring 2024, Spring 2025)}{Somerville, MA}
+    Spring 2024, Spring 2025, Fall 2025)}{Somerville, MA}
     \resumeSubSubheading{{Relevant Coursework}: Distributed systems, Machine learning, Algorithms,
     Machine structure, Data structures, Statistics/Probability theory, }{}
     \resumeSubSubheading{Operating systems, Modeling, Abstract
