--- a/components/pl.tex
+++ b/components/pl.tex
@@ -22,8 +22,8 @@
 \begin{itemize}[leftmargin=0in, label={}]
   \scriptsize{
     \item{
-      \textbf{Programming Languages}{: C/C++, Python, TypeScript, Golang, React, Rust, x86-64 Assembly, Standard ML, OCaml} \\
-      \textbf{Tools, Technologies \& Concepts}{: Node.js, Docker, CI/CD, AWS, MongoDB, PostgreSQL, Scikit-learn, NumPy/Pandas/Matplotlib, TensorFlow/Keras, PyTorch, Tailwind, Figma, HTML, Unit/Integration Testing, Functional \& Asynchronous Programming, Network Programming, Hyperparameter Tuning} \\
+      \textbf{Programming Languages}{: C/C++, Python, TypeScript, Golang, React, Rust, Scala, x86-64 Assembly, Standard ML, OCaml} \\
+      \textbf{Tools, Technologies \& Concepts}{: Node.js, Docker, CI/CD, AWS, MongoDB, PostgreSQL, Scikit-learn, NumPy/Pandas/Matplotlib, TensorFlow/Keras, PyTorch, Tailwind, Figma, HTML, Unit/Integration Testing, Functional \& Asynchronous Programming, Network Programming, Hyperparameter Tuning, Embedded Systems, Compiler Engineering} \\
       \textbf{Relevant Certifications}{: AWS Certified Cloud Practitioner}
       }
   }
